# This Software (Dioptra) is being made available as a public service by the
# National Institute of Standards and Technology (NIST), an Agency of the United
# States Department of Commerce. This software was developed in part by employees of
# NIST and in part by NIST contractors. Copyright in portions of this software that
# were developed by NIST contractors has been licensed or assigned to NIST. Pursuant
# to Title 17 United States Code Section 105, works of NIST employees are not
# subject to copyright protection in the United States. However, NIST may hold
# international copyright in software created by its employees and domestic
# copyright (or licensing rights) in portions of software that were assigned or
# licensed to NIST. To the extent that NIST holds copyright in this software, it is
# being made available under the Creative Commons Attribution 4.0 International
# license (CC BY 4.0). The disclaimers of the CC BY 4.0 license apply to all parts
# of the software developed or licensed by NIST.
#
# ACCESS THE FULL CC BY 4.0 LICENSE HERE:
# https://creativecommons.org/licenses/by/4.0/legalcode
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dioptra"
version = "1.0.0dev0"
authors = [
    { name="James Glasbrenner", email="jglasbrenner@mitre.org" },
    { name="Harold Booth", email="harold.booth@nist.gov" },
    { name="Keith Manville", email="kmanville@mitre.org" },
    { name="Julian Sexton", email="jtsexton@mitre.org" },
    { name="Michael Andy Chisholm" },
    { name="Henry Choy", email="hchoy@mitre.org" },
    { name="Andrew Hand", email="ahand@mitre.org" },
    { name="Bronwyn Hodges", email="bhodges@mitre.org" },
    { name="Paul Scemama" },
    { name="Dmitry Cousin", email="dmitry.cousin@nist.gov" },
    { name="Eric Trapnell", email="eric.trapnell@nist.gov" },
    { name="Mark Trapnell", email="mark.trapnell@nist.gov" },
    { name="Howard Huang", email="hhuang@mitre.org" },
    { name="Paul Rowe" },
    { name="Alexander Byrne", email="alexanderbyrne@mitre.org" },
    { name="Luke Barber" },
    { name="Cory Miniter" },
]
maintainers = [
    { name="James Glasbrenner", email="jglasbrenner@mitre.org" },
    { name="Keith Manville", email="kmanville@mitre.org" },
    { name="Harold Booth", email="harold.booth@nist.gov" },
]
description = "Dioptra provides Machine Learning Security researchers with an environment for organizing and running experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "async-timeout>=4.0.0",
    "boto3>=1.16.0",
    "Click>=8.0.0,<9",
    "entrypoints>=0.3",
    "flask-accepts>=0.17.0",
    "Flask-Cors>=3.0.1",
    "Flask-Login>=0.6.0",
    "Flask-Migrate>=2.5.0",
    "flask-restx>=0.5.1",
    "Flask-SQLAlchemy>=2.4.0",
    "Flask>=2.0.0",
    "gunicorn>=20.0.0",
    "injector>=0.18.0",
    "jsonschema>=4.17.0",
    "marshmallow>=3.9.0,<4",
    "mlflow-skinny>=2",
    "multimethod>=1.5",
    "nh3>=0.3.0",
    "numpy>=1.22.0",
    "pandas>=1.5.0",
    "passlib>=1.7.0",
    "pillow>=9.2.0",
    "psycopg2-binary>=2.9.0",
    "pyparsing>=3.1.0",
    "python-dateutil>=2.8.0",
    "python-json-logger>=2.0.0",
    "PyYAML>=6.0.0",
    "redis>=3.5.0",
    "requests-toolbelt>=1.0.0",
    "requests>=2.25,<3",
    "rq>=1.5.0",
    "scipy>=1.4.1",
    "simplejson>=3.10.0",
    "SQLAlchemy>=2",
    "structlog>=20.2.0",
    "tensorflow-datasets>=4.9.9",
    "tomli>=2.2.0",
    "typing-extensions>=3.7.4.3",
    "universal-pathlib>=0.2.6",
    "werkzeug>=3.0.0,<3.1.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

[project.urls]
repository = "https://github.com/usnistgov/dioptra"
documentation = "https://pages.nist.gov/dioptra"
Changelog = "https://github.com/usnistgov/dioptra/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/usnistgov/dioptra/issues"

[project.scripts]
dioptra-db = "dioptra.restapi.db.alembic.run:cli"
run-experiment = "dioptra.task_engine.run_experiment:main"
validate-experiment = "dioptra.task_engine.validate:main"
s3-download = "dioptra.worker.s3_download_cli:main"
dioptra-worker-v1 = "dioptra.worker.dioptra_worker_v1:main"

[project.entry-points."dioptra.generics.estimator_predict"]
tf_keras_model = "dioptra.generics_plugins.estimator_predict.tf_keras_model"

[project.entry-points."dioptra.generics.fit_estimator"]
tf_keras_model = "dioptra.generics_plugins.fit_estimator.tf_keras_model"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "binaryornot>=0.4.0",
    "cookiecutter>=2.0.0,<2.2.0",
    "coverage[toml]>=7.8.0",
    "cruft>=2.16.0",
    "Faker>=24.0.0",
    "flake8-bugbear>=24.12.12",
    "flake8>=7.2.0",
    "freezegun>=1.5.2",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.0",
    "mlflow>=2",
    "mypy-extensions>=1.1.0",
    "mypy[reports]>=1.15.0",
    "nbconvert>=6.0.0",
    "prefect>=1.0.0,<2",
    "pycodestyle>=2.13.0",
    "pydocstyle>=6.3.0",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "pytest-datadir>=1.7.2",
    "pytest>=8.3.5",
    "pytoml>=0.1.21",
    "tomli>=2.2.1",
    "tox>=4.25.0",
    "types-cryptography>=3.3.23.2",
    "types-freezegun>=1.1.10",
    "types-jsonschema>=4.24.0.20250528",
    "types-mypy-extensions>=1.1.0.20250425",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pyyaml>=6.0.12.20250402",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20250328",
    "types-toml>=0.10.8.20240310",
]
docs = [
    "Markdown>=3.4.0",
    "mistune<2",
    "plantuml-markdown>=3.11.1",
    "pydata-sphinx-theme>=0.13.3",
    "pymdown-extensions>=9.4",
    "recommonmark>=0.7.1",
    "Sphinx>=4.5.0,<5",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=1.19.1",
    "sphinx-book-theme>=0.3.3",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.1.0",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-applehelp<=1.0.4",
    "sphinxcontrib-devhelp<=1.0.2",
    "sphinxcontrib-htmlhelp<=2.0.1",
    "sphinxcontrib-openapi>=0.7.0",
    "sphinxcontrib-qthelp<=1.0.3",
    "sphinxcontrib-serializinghtml<=1.1.5",
    "typing-extensions>=3.7.4.0",
    "web-compile>=0.2.3",
]
mlflow-tracking-container = [
    "boto3>=1.16.0",
    "mlflow>=2",
    "psycopg2-binary>=2.9.0",
    "simplejson>=3.10.0",
]

[project.optional-dependencies]
examples = [
    "aiohttp>=3.8.0",
    "kaggle>=1.5.0",
    "rich>=13.3.0",
]
pytorch-cpu = [
    "tensorboard>=2.16.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]
pytorch-gpu = [
    "tensorboard>=2.16.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]
tensorflow-cpu = [
    "tensorflow==2.16.1",
    "tensorflow-metal==1.1.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "tensorboard>=2.16.0",
]
tensorflow-gpu = [
    "tensorflow[and-cuda]==2.16.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorboard>=2.16.0",
]
worker = [
    "adversarial-robustness-toolbox>=1.9.0",
    "heart-library>=0.4.2",
    "imgaug>=0.4.0",
    "maite>=0.6.0",
    "matplotlib",
    "mlflow>=2",
    "nrtk>=0.3.0",
    "opencv-python>=4",
    "prefect>=1.0.0,<2",
    "pyarrow>=18.0.0",
    "pycocotools>=2.0.0",
    "rich>=13.3.0",
    "scikit-learn>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.bumpver]
current_version = "1.0.0-dev"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "release {old_version} → {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"README.md" = [
    "Release {version}",
]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]
"src/dioptra/client/__version__.py" = [
    "{pep440_version}",
]
"src/dioptra/pyplugs/__version__.py" = [
    "{pep440_version}",
]
"src/dioptra/restapi/__version__.py" = [
    "{pep440_version}",
]
"src/dioptra/rq/__version__.py" = [
    "{pep440_version}",
]
"src/dioptra/sdk/__version__.py" = [
    "{pep440_version}",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0dev0"
changelog_file = "CHANGELOG.md"
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"],
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only and type checking-only code:
    "def __repr__",
    "if TYPE_CHECKING:",
    # Don't complain if non-runnable code isn't run:
    '\.\.\.',
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
omit = [
    # omit __init__.py files since they are just for mypy and pytest purposes
    "*/__init__.py",
    # omit __version__.py files since they contain no functionality
    "*/__version__.py",
    # omit config and models files in restapi module since these are just configurations and imports
    "restapi/config.py",
    "restapi/models.py",
    # omit alembic directory since these files are just for migrating the database
    "*/alembic/*.py",
    "*/alembic/versions/*.py",
]

[tool.doc8]
ignore = ["D001"]

[tool.hatch.build.targets.wheel]
packages = ["src/dioptra"]

[tool.isort]
profile = "black"
honor_noqa = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
platform = "linux"
mypy_path = "src,tests"
explicit_package_bases = true
namespace_packages = true
show_column_numbers = true
follow_imports = "normal"
ignore_missing_imports = true
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
cache_dir = "/dev/null"
exclude = [
    'alembic/.*$',  # exclude all files, folders under alembic directory
]
plugins = "numpy.typing.mypy_plugin"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/.ipynb_checkpoints",
    "**/__pycache__",
    "**/.tox"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--import-mode=importlib -ra"
testpaths = [
    "tests/unit",
]
log_cli = false
log_cli_level = "INFO"
markers = [
    "info: marks tests as info (deselect with '-m \"not info\"')",
]
norecursedirs = [
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    '{arch}',
    "alembic",
]
filterwarnings = [
    "ignore:.*mypy_extensions.TypedDict is deprecated.*:DeprecationWarning:prefect.*",
    "ignore:.*Object of type <.*> not in session.*:sqlalchemy.exc.SAWarning",
    "ignore:.*The '__version__' attribute is deprecated.*:DeprecationWarning",
    "ignore:.*'crypt' is deprecated and slated for removal.*:DeprecationWarning",
]

[tool.rstcheck]
ignore_directives = [
    "autoclass",
    "autodecorator",
    "autofunction",
    "automodule",
    "autoexception",
    "dropdown",
    "panels",
    "margin",
    "tab-set",
    "tabbed",
]
ignore_messages = '(Hyperlink target ".*?" is not referenced\.)'
ignore_roles = [
    "kbd",
]
report_level = "INFO"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
extend-exclude = [
    ".ipynb_checkpoints",
    "alembic",
]

[tool.ruff.lint]
select = ["B", "B9", "C", "E", "F", "W"]
extend-select = ["I"]
ignore = ["E203", "E302", "E501", "B905"]
per-file-ignores = { "examples/*/src/*.py" = ["E402"] }

# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.uv]
conflicts = [
    [
        { extra = "pytorch-cpu" },
        { extra = "pytorch-gpu" },
        { extra = "tensorflow-cpu" },
        { extra = "tensorflow-gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "pytorch-cpu" },
    { index = "pytorch-gpu", extra = "pytorch-gpu" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "pytorch-cpu" },
    { index = "pytorch-gpu", extra = "pytorch-gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "pytorch-cpu" },
    { index = "pytorch-gpu", extra = "pytorch-gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
