[metadata]
name = mitre-securing-ai
maintainer = James Glasbrenner
maintainer_email = jglasbrenner@mitre.org
version = 0.0.0
description = The Securing AI Lab provides Machine Learning Security researchers with a testbed for organizing and running experiments.
license = Apache License 2.0
license_file = LICENSE
url = https://gitlab.mitre.org/secure-ai/securing-ai-lab-components
project_urls =
    Changelog=https://gitlab.mitre.org/secure-ai/securing-ai-lab-components/blob/master/CHANGELOG.md
    Issue Tracker=https://gitlab.mitre.org/secure-ai/securing-ai-lab-components/issues
classifiers =
    Framework :: Flask
    Framework :: MLFlow
    Framework :: Redis
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7
zip_safe = true
include_package_data = true
package_dir=
    =src
packages = find_namespace:
install_requires =
    alembic<=1.4.1
    boto3>=1.16.0
    Click>=7.1.0
    entrypoints>=0.3
    Flask>=1.1.0
    flask-accepts>=0.17.0
    Flask-Injector>=0.12.0
    Flask-Migrate>=2.5.0
    Flask-JWT-Extended>=3.24.0
    Flask-SQLAlchemy>=2.4.0
    flask-restx>=0.2.0
    Flask-WTF>=0.14.0
    injector>=0.18.0
    marshmallow>=3.9.0,<4
    multimethod>=1.5
    mlflow>=1.12.1
    numpy>=1.19.0
    pandas>=1.1.0
    python-dateutil>=2.8.0
    redis>=3.5.0
    rq>=1.5.0
    scipy>=1.4.1
    structlog>=20.2.0
    SQLAlchemy<=1.3.13
    typing-extensions>=3.7.4.0
    werkzeug>=1.0.0

[options.entry_points]
mlflow.project_backend = securingai=mitre.securingai.mlflow_plugins.securingai_backend:SecuringAIProjectBackend

[options.extras_require]
docs =
    markdown
    plantuml-markdown
    pymdown-extensions
    recommonmark
    sphinx>=3.3.0
    sphinx-rtd-theme
    sphinx-book-theme
dev =
    autopep8
    black>=20.8b1
    commitizen
    coverage
    docker>=4.0.0
    entrypoints
    flake8-bugbear
    flake8>=3.8.0
    freezegun
    ipython
    isort>=5.6.0
    mypy
    pre-commit
    pycodestyle
    pydocstyle
    pytest>=6
    pytest-cov
    pytest-datadir
    pytoml
    seed-isort-config
    setuptools-scm
    testinfra
    twine
    tox
sdk =
    cryptography==3.*
    prefect==0.14.*

[options.packages.find]
where=src
