# This Software (Dioptra) is being made available as a public service by the
# National Institute of Standards and Technology (NIST), an Agency of the United
# States Department of Commerce. This software was developed in part by employees of
# NIST and in part by NIST contractors. Copyright in portions of this software that
# were developed by NIST contractors has been licensed or assigned to NIST. Pursuant
# to Title 17 United States Code Section 105, works of NIST employees are not
# subject to copyright protection in the United States. However, NIST may hold
# international copyright in software created by its employees and domestic
# copyright (or licensing rights) in portions of software that were assigned or
# licensed to NIST. To the extent that NIST holds copyright in this software, it is
# being made available under the Creative Commons Attribution 4.0 International
# license (CC BY 4.0). The disclaimers of the CC BY 4.0 license apply to all parts
# of the software developed or licensed by NIST.
#
# ACCESS THE FULL CC BY 4.0 LICENSE HERE:
# https://creativecommons.org/licenses/by/4.0/legalcode
[metadata]
name = mitre-securing-ai
author = James Glasbrenner <jglasbrenner@mitre.org>, Cory Miniter <jminiter@mitre.org>, Howard Huang <hhuang@mitre.org>, Julian Sexton <jtsexton@mitre.org>, Paul Rowe <prowe@mitre.org>
maintainer = James Glasbrenner
maintainer_email = jglasbrenner@mitre.org
version = 0.0.0
description = Dioptra provides Machine Learning Security researchers with an environment for organizing and running experiments.
url = https://github.com/usnistgov/dioptra
project_urls =
    Changelog=https://github.com/usnistgov/dioptra/blob/main/CHANGELOG.md
    Issue Tracker=https://github.com/usnistgov/dioptra/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Flask
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Security

[options]
python_requires = >=3.7
zip_safe = true
include_package_data = true
package_dir=
    =src
packages = find_namespace:
install_requires =
    alembic<=1.4.1
    boto3>=1.16.0
    Click>=7.1.0,<8
    entrypoints>=0.3
    Flask>=1.1.0,<2
    flask-accepts>=0.17.0,<1
    Flask-Injector>=0.12.0,<1
    Flask-JWT-Extended>=3.24.0,<4
    Flask-Migrate>=2.5.0,<3
    flask-restx>=0.2.0,<1
    Flask-SQLAlchemy>=2.4.0,<3
    Flask-WTF>=0.14.3,<1
    injector>=0.18.0
    marshmallow>=3.9.0,<4
    multimethod>=1.5
    mlflow>=1.12.1
    numpy>=1.19.0
    pandas>=1.1.0
    python-dateutil>=2.8.0
    redis>=3.5.0
    rq>=1.5.0
    scipy>=1.4.1
    structlog>=20.2.0
    SQLAlchemy>=1.3.0
    typing-extensions>=3.7.4.0
    werkzeug>=1.0.0,<2

[options.entry_points]
securingai.generics.estimator_predict = tf_keras_model=mitre.securingai.generics_plugins.estimator_predict.tf_keras_model
securingai.generics.fit_estimator = tf_keras_model=mitre.securingai.generics_plugins.fit_estimator.tf_keras_model
mlflow.project_backend = securingai=mitre.securingai.mlflow_plugins.securingai_backend:SecuringAIProjectBackend

[options.extras_require]
docs =
    markdown
    plantuml-markdown
    pymdown-extensions
    recommonmark
    sphinx>=3.3.0
    sphinx-rtd-theme
    sphinx-book-theme
dev =
    autopep8
    black>=20.8b1
    commitizen
    coverage
    docker>=4.0.0
    entrypoints
    flake8-bugbear
    flake8>=3.8.0
    freezegun
    ipython
    isort>=5.6.0
    mypy>=0.900
    pre-commit
    pycodestyle
    pydocstyle
    pytest>=6
    pytest-cov
    pytest-datadir
    pytest-testinfra
    pytoml
    setuptools-scm
    twine
    tox
    types-click
    types-cryptography
    types-enum34
    types-Flask
    types-ipaddress
    types-Jinja2
    types-redis
    types-requests
    types-Werkzeug
sdk =
    cryptography==3.*
    prefect>=0.14,<0.16

[options.packages.find]
where=src
